deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jatelindo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jatelindo-app
  template:
    metadata:
      labels:
        app: jatelindo-app
    spec:
      containers:
      - name: jatelindo-monitoring
        image: igostilllearn/jatelindo-monitoring:v9
