database.yaml
apiVersion: v1
kind: Service
metadata:
  name: jatelindo-db-svc
spec:
  selector:
    app: jatelindo-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jatelindo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jatelindo-db
  template:
    metadata:
      labels:
        app: jatelindo-db
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.5
