networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: jatelindo-svc
spec:
  selector:
    app: jatelindo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jatelindo-ingress
spec:
  rules:
  - host: jatelindo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jatelindo-svc
            port:
              number: 80
